fix to pages visibility

--- a/ui/cw_app/src/renderer/analysis/css/analysis-page.module.css
+++ b/ui/cw_app/src/renderer/analysis/css/analysis-page.module.css
@@ -15,3 +15,11 @@
     padding-right: 30px;
     width: 40vw;
 }
+
+.visible {
+    display: inherit
+}
+
+.hidden {
+    display: none
+}
