--- a/ui/cw_app/src/renderer/map/css/map-page.module.css
+++ b/ui/cw_app/src/renderer/map/css/map-page.module.css
@@ -5,3 +5,11 @@
     z-index: 1;
     overflow: hidden;
 }
+
+.visible {
+    display: inherit
+}
+
+.hidden {
+    display: none
+}
